Agregando route para hacer SPA y agregado de secciones faltantes

--- a/src/App.css
+++ b/src/App.css
@@ -6,3 +6,12 @@
   background-color: #FFC107;
 }
 
+.iconFace{
+  font-size:3vh;
+  color: blue
+}
+
+.iconWhats{
+  font-size:3vh;
+  color: #25d366
+}
